--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script defer data-domain="converter.heggland.tech" src="https://plausible.heggland.tech/js/script.js"></script>
 </body>
 </html>
